syntax = "proto3";

option java_package = "de.marcreichelt.covid4wear";
option java_multiple_files = true;

message VaccinationDataCache {
  float firstVaccination = 1;
  float fullVaccination = 2;
}
